--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-<style type="text/css">
 #main-header{
     text-align:center;
     background-color: black;
@@ -8,4 +7,7 @@
 #main-footer{
     text-align: center;
 }
-</style>
+
+#te{
+    color:red;
+}
