--- a/css/style.css
+++ b/css/style.css
@@ -85,3 +85,14 @@ p{
     padding-bottom: 6px ;
     border-bottom: dotted 1px #7289da;
 }
+.submit1 {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 5px 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 5px;
+  }
