--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,9 @@
     text-align: center;
 }
 
+.clr{
+    clear:both;
+}
 #te{
     color:red;
     background-color: violet;
@@ -73,6 +76,8 @@ p{
     padding:10px;
     text-align: left;
     width: 100px;
+    float:left;
+    margin:20px;
 }
 .menu h2{
     text-align: center;
@@ -89,6 +94,7 @@ p{
      padding:20px;
       border: 2px #7289da solid ;
       width: 250px;
+    float:left;
   }
   .myform input[type="text"], .myform input[type="email"], .myform textarea{
       width:100%;
@@ -123,3 +129,29 @@ p{
     font-size: 16px;
     border-radius: 5px;
   }
+
+.block{
+    float:left;
+    width:300px;
+}
+.goals{
+      float:left;
+      border: 2px solid #7289da;
+      border-radius: 5px;
+      padding-left: 20px;
+      width: 400px;
+      margin-top:20px;
+  }
+  .icons{
+      margin-top:10px;
+      margin-left:10%;
+      float:left;
+  }
+  .icons2{
+    margin-top:10px;
+    float:left;
+    margin-left:10%;
+}
+.greet{
+    margin-left:20px;
+}
